--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "dungeongraph",
+  "name": "graphview",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "orm": "^4.0.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
-    "redux-orm": "^0.9.4"
+    "redux-orm": "^0.9.4",
+    "reselect": "^3.0.1",
+    "socket.io": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
